--- a/index.html
+++ b/index.html
@@ -18,34 +18,44 @@
         </div>
 </nav>
 <section class="categories">
-  <h2>Shop by Category</h2>
-  <div class="category-row">
-    <div class="category">
-      <div class="category-icon"><i class="fas fa-utensils"></i></div>
-      <p>Food</p>
-    </div>
-    <div class="category">
-      <div class="category-icon"><i class="fas fa-wine-bottle"></i></div>
-      <p>Drinks</p>
-    </div>
-    <div class="category">
-      <div class="category-icon"><i class="fas fa-soap"></i></div>
-      <p>Hygiene</p>
-    </div>
-    <div class="category">
-      <div class="category-icon"><i class="fas fa-cookie-bite"></i></div>
-      <p>Snacks</p>
-    </div>
-    <div class="category">
-      <div class="category-icon"><i class="fas fa-apple-alt"></i></div>
-      <p>Fruits</p>
-    </div>
-    <div class="category">
-      <div class="category-icon"><i class="fas fa-pump-soap"></i></div>
-      <p>Cleaning</p>
+  <h2>-</h2>
+  <div class="category-container">
+    <div class="category-row">
+      <div class="category">
+        <div class="category-icon"><i class="fas fa-utensils"></i></div>
+        <p>Ushqim</p>
+      </div>
+      <div class="category">
+        <div class="category-icon"><i class="fas fa-wine-bottle"></i></div>
+        <p>Pije</p>
+      </div>
+      <div class="category">
+        <div class="category-icon"><i class="fas fa-soap"></i></div>
+        <p>Higjena</p>
+      </div>
+      <div class="category">
+        <div class="category-icon"><i class="fas fa-tools"></i></div>
+        <p>Vegla Pune</p>
+      </div>
+      <div class="category">
+        <div class="category-icon"><i class="fas fa-puzzle-piece"></i></div>
+        <p>Lodra</p>
+      </div>
+      <div class="category">
+        <div class="category-icon"><i class="fas fa-pencil-ruler"></i></div>
+        <p>Shkolle</p>
+      </div>
     </div>
   </div>
 </section>
+<section class="welcome-section">
+  <div class="welcome-content">
+    <h1>lorem, Ari-E Market</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione minima culpa unde nemo ipsum del</p>
+    <a href="#" class="shop-button">Shiko produktet</a>
+  </div>
+</section>
+
 
         
     
